tests/test109.rael.exp
Error [tests/test109.rael:2:5]: 'break' is outside of a loop
|     break
|     ^
